Eliminate spurious request cancelations

This fixes the situation where every request is canceled even after it
has completed successfully.  The cancels were not harming anything and
were dropped on the floor but the additional messages were useless.

BUG=642172

Review-Url: https://codereview.chromium.org/2303733004
Cr-Commit-Position: refs/heads/master@{#417565}

Former-commit-id: 8b3bca182ef878e7f6579bc067dbfae85887e521